--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -26,5 +26,66 @@ ja:
   time:
     formats:
       default: '%Y/%m/%d %H:%M:%S'
+      long: '%Y年%m月%d日 %H時%M分'
       short: '%m/%d %H:%M'
-      date_only: '%Y/%m/%d'
+    am: '午前'
+    pm: '午後'
+
+  number:
+    currency:
+      format:
+        unit: '¥'
+        format: '%u%n'
+        separator: '.'
+        delimiter: ','
+        precision: 0
+    format:
+      separator: '.'
+      delimiter: ','
+      precision: 3
+    human:
+      decimal_units:
+        format: '%n%u'
+        units:
+          unit: ''
+          thousand: '千'
+          million: '百万'
+          billion: '十億'
+          trillion: '兆'
+          quadrillion: '千兆'
+      format:
+        delimiter: ''
+        precision: 3
+        significant: true
+        strip_insignificant_zeros: true
+      storage_units:
+        format: '%n%u'
+        units:
+          byte: 'バイト'
+          kb: 'KB'
+          mb: 'MB'
+          gb: 'GB'
+          tb: 'TB'
+    percentage:
+      format:
+        delimiter: ''
+        format: '%n%'
+    precision:
+      format:
+        delimiter: ''
+
+  date:
+    formats:
+      default: '%Y/%m/%d'
+      long: '%Y年%m月%d日'
+      short: '%m/%d'
+    day_names: [日曜日, 月曜日, 火曜日, 水曜日, 木曜日, 金曜日, 土曜日]
+    abbr_day_names: [日, 月, 火, 水, 木, 金, 土]
+    month_names:
+      [~, 1月, 2月, 3月, 4月, 5月, 6月, 7月, 8月, 9月, 10月, 11月, 12月]
+    abbr_month_names:
+      [~, 1月, 2月, 3月, 4月, 5月, 6月, 7月, 8月, 9月, 10月, 11月, 12月]
+    order:
+      - :year
+      - :month
+      - :day
