--- a/config/locales/devise.ja.yml
+++ b/config/locales/devise.ja.yml
@@ -76,6 +76,16 @@ ja:
         cancel_account: 'アカウントを削除する'
         cancel_account_confirm: '本当にアカウントを削除しますか？この操作は取り消せません。'
         back: '戻る'
+        title: "パスワード変更"
+        update: "更新する"
+        waiting_confirmation: "現在、%{email}の確認待ちです"
+        leave_blank_if_no_change: "変更しない場合は空白のままにしてください"
+        current_password_needed: "変更を確認するために現在のパスワードが必要です"
+        cancel_account: "アカウントの削除"
+        unhappy: "ご不満がございましたら、アカウントを削除することができます"
+        are_you_sure: "本当によろしいですか？"
+      updated: "パスワードを更新しました"
+      destroyed: "アカウントを削除しました。またのご利用をお待ちしております"
     passwords:
       no_token: このページにはアクセスできません。パスワード再設定メールのリンクからアクセスされた場合には、URL をご確認ください。
       send_instructions: パスワードの再設定について数分以内にメールでご連絡いたします。
@@ -102,6 +112,9 @@ ja:
         forgot_password: 'パスワードをお忘れの方'
         sign_in_with_provider: '%{provider}でログイン'
         sign_up_with_provider: '%{provider}で登録'
+      minimum_password_length: "%{count}文字以上"
+      links:
+        back: "戻る"
     unlocks:
       send_instructions: アカウントのロック解除方法を数分以内にメールでご連絡します。
       send_paranoid_instructions: アカウントが存在する場合、アカウントのロック解除方法を数分以内にメールでご連絡します。
