--- a/config/locales/views/shared/ja.yml
+++ b/config/locales/views/shared/ja.yml
@@ -3,13 +3,15 @@ ja:
     header:
       navigation:
         sales_reports: '売上レポート'
-        pl_reports: 'PLレポート'
+        pl_reports: '損益レポート'
       profile:
-        edit: '編集'
+        edit: 'プロフィール編集'
         guest: 'ゲスト'
-        sign_in: 'サインイン'
+        sign_in: 'ログイン'
       menu:
         my_profile: 'マイプロフィール'
-        logout: 'ログアウト'
-        sign_in: 'サインイン'
+        sign_in: 'ログイン'
         sign_up: '新規登録'
+        logout: 'ログアウト'
+        privacy_policy: 'プライバシーポリシー'
+        terms_of_service: '利用規約'
