--- a/config/locales/devise.ja.yml
+++ b/config/locales/devise.ja.yml
@@ -16,41 +16,41 @@ ja:
       unconfirmed: メールアドレスの本人確認が必要です。
     mailer:
       confirmation_instructions:
-        subject: 'メールアドレス確認のお願い'
+        subject: メールアドレス確認のお願い
         greeting: '%{email}様'
-        message: '以下のリンクをクリックしてメールアドレスの確認を完了してください。'
-        action: 'メールアドレスを確認する'
+        message: 以下のリンクをクリックしてメールアドレスの確認を完了してください。
+        action: メールアドレスを確認する
       reset_password_instructions:
-        subject: 'パスワード再設定のご案内'
+        subject: パスワード再設定のご案内
         greeting: '%{email}様'
-        message: 'パスワード再設定のリクエストを受け付けました。以下のリンクをクリックしてパスワードの再設定を行ってください。'
-        action: 'パスワードを再設定する'
-        ignore: 'このメールに心当たりがない場合は、無視してください。'
-        warning: '上記のリンクにアクセスして新しいパスワードを設定するまで、パスワードは変更されません。'
+        message: パスワード再設定のリクエストを受け付けました。以下のリンクをクリックしてパスワードの再設定を行ってください。
+        action: パスワードを再設定する
+        ignore: このメールに心当たりがない場合は、無視してください。
+        warning: 上記のリンクにアクセスして新しいパスワードを設定するまで、パスワードは変更されません。
       unlock_instructions:
-        subject: 'アカウントロック解除のご案内'
+        subject: アカウントロック解除のご案内
         greeting: '%{email}様'
-        message: 'アカウントがロックされました。以下のリンクをクリックしてアカウントのロックを解除してください。'
-        action: 'アカウントのロックを解除する'
+        message: アカウントがロックされました。以下のリンクをクリックしてアカウントのロックを解除してください。
+        action: アカウントのロックを解除する
       email_changed:
-        subject: 'メールアドレス変更のお知らせ'
+        subject: メールアドレス変更のお知らせ
         greeting: '%{email}様'
-        message_unconfirmed: 'メールアドレスの変更が申請されました。新しいメールアドレス（%{email}）の確認が完了次第、変更が反映されます。'
-        message_confirmed: 'メールアドレスが（%{email}）に変更されました。'
+        message_unconfirmed: メールアドレスの変更が申請されました。新しいメールアドレス（%{email}）の確認が完了次第、変更が反映されます。
+        message_confirmed: メールアドレスが（%{email}）に変更されました。
       password_change:
-        subject: 'パスワード変更完了のお知らせ'
+        subject: パスワード変更完了のお知らせ
         greeting: '%{email}様'
-        message: 'パスワードが変更されたことをお知らせします。'
+        message: パスワードが変更されたことをお知らせします。
     sessions:
       signed_in: ログインしました。
       signed_out: ログアウトしました。
       already_signed_out: すでにログアウト済みです。
       new:
-        title: 'ログイン - Parts Sync'
-        sign_in: 'ログイン'
-        welcome_message: '安全なアクセスで、あなただけの経験を'
-        no_account: 'アカウントをお持ちでない方は'
-        banner_message: '最高の管理画面を体験してください'
+        title: ログイン - Parts Sync
+        sign_in: ログイン
+        welcome_message: 安全なアクセスで、あなただけの経験を
+        no_account: アカウントをお持ちでない方は
+        banner_message: 最高の管理画面を体験してください
     registrations:
       destroyed: アカウントを削除しました。またのご利用をお待ちしております。
       signed_up: アカウント登録が完了しました。
@@ -61,31 +61,21 @@ ja:
       updated: アカウント情報を変更しました。
       updated_but_not_signed_in: パスワードが変更されたため、再度ログインしてください。
       new:
-        title: 'アカウント登録 - Parts Sync'
-        sign_up: 'アカウント登録'
-        welcome_message: '新規アカウントを作成して、サービスをご利用ください'
-        terms_html: '利用規約に同意する'
-        have_account: 'すでにアカウントをお持ちの方は'
+        title: アカウント登録 - Parts Sync
+        sign_up: アカウント登録
+        welcome_message: 新規アカウントを作成して、サービスをご利用ください
+        terms_html: 利用規約とプライバシーポリシーに同意する
+        have_account: すでにアカウントをお持ちの方は
       edit:
-        title: 'アカウント設定 - Parts Sync'
-        profile_settings: 'プロフィール設定'
-        password_settings: 'パスワード設定'
-        current_password_note: '変更を確認するために現在のパスワードが必要です'
-        password_leave_blank: '変更しない場合は空白のままにしてください'
-        update: '更新する'
-        cancel_account: 'アカウントを削除する'
-        cancel_account_confirm: '本当にアカウントを削除しますか？この操作は取り消せません。'
-        back: '戻る'
-        title: "パスワード変更"
-        update: "更新する"
-        waiting_confirmation: "現在、%{email}の確認待ちです"
-        leave_blank_if_no_change: "変更しない場合は空白のままにしてください"
-        current_password_needed: "変更を確認するために現在のパスワードが必要です"
-        cancel_account: "アカウントの削除"
-        unhappy: "ご不満がございましたら、アカウントを削除することができます"
-        are_you_sure: "本当によろしいですか？"
-      updated: "パスワードを更新しました"
-      destroyed: "アカウントを削除しました。またのご利用をお待ちしております"
+        title: アカウント設定 - Parts Sync
+        profile_settings: プロフィール設定
+        password_settings: パスワード設定
+        current_password_note: 変更を確認するために現在のパスワードが必要です
+        password_leave_blank: 変更しない場合は空白のままにしてください
+        update: 更新する
+        cancel_account: アカウントを削除する
+        cancel_account_confirm: 本当にアカウントを削除しますか？この操作は取り消せません。
+        back: 戻る
     passwords:
       no_token: このページにはアクセスできません。パスワード再設定メールのリンクからアクセスされた場合には、URL をご確認ください。
       send_instructions: パスワードの再設定について数分以内にメールでご連絡いたします。
@@ -93,28 +83,27 @@ ja:
       updated: パスワードが正しく変更されました。
       updated_not_active: パスワードが正しく変更されました。
       new:
-        title: 'パスワードをお忘れの方 - Parts Sync'
-        forgot_password: 'パスワードをお忘れの方'
-        instruction: '登録されているメールアドレスにパスワード再設定のリンクを送信します'
-        banner_message: '最高の管理画面を体験してください'
-        send_reset_link: 'パスワード再設定メールを送信'
-        back_to_login: 'ログイン画面に戻る'
+        title: パスワードをお忘れの方 - Parts Sync
+        forgot_password: パスワードをお忘れの方
+        instruction: 登録されているメールアドレスにパスワード再設定のリンクを送信します
+        banner_message: 最高の管理画面を体験してください
+        send_reset_link: パスワード再設定メールを送信
+        back_to_login: ログイン画面に戻る
       edit:
-        title: 'パスワード再設定 - Parts Sync'
-        change_password: 'パスワードを変更する'
-        new_password: '新しいパスワード'
-        confirm_new_password: '新しいパスワード（確認）'
-        change_my_password: 'パスワードを変更する'
+        title: パスワード再設定 - Parts Sync
+        change_password: パスワードを変更する
+        new_password: 新しいパスワード
+        confirm_new_password: 新しいパスワード（確認）
+        change_my_password: パスワードを変更する
     shared:
       links:
-        sign_in: 'ログイン'
-        sign_up: 'アカウント登録'
-        forgot_password: 'パスワードをお忘れの方'
+        sign_in: ログイン
+        sign_up: アカウント登録
+        forgot_password: パスワードをお忘れの方
         sign_in_with_provider: '%{provider}でログイン'
         sign_up_with_provider: '%{provider}で登録'
-      minimum_password_length: "%{count}文字以上"
-      links:
-        back: "戻る"
+        back: 戻る
+      minimum_password_length: '%{count}文字以上'
     unlocks:
       send_instructions: アカウントのロック解除方法を数分以内にメールでご連絡します。
       send_paranoid_instructions: アカウントが存在する場合、アカウントのロック解除方法を数分以内にメールでご連絡します。
