--- a/config/locales/devise.ja.yml
+++ b/config/locales/devise.ja.yml
@@ -1,110 +1,158 @@
 ja:
   devise:
     confirmations:
-      confirmed: メールアドレスの確認が完了しました。
-      send_instructions: アカウントの有効化について数分以内にメールでご連絡します。
-      send_paranoid_instructions: メールアドレスが登録済みの場合、本人確認用のメールが数分以内に送信されます。
+      confirmed: 'アカウントを登録しました。'
+      send_instructions: '登録方法を数分以内にメールでご連絡します。'
+      send_paranoid_instructions: 'メールアドレスが登録済みの場合、本人確認用のメールが数分以内に送信されます。'
     failure:
-      already_authenticated: すでにログインしています。
-      inactive: アカウントが有効化されていません。
+      already_authenticated: '既にログインしています。'
+      inactive: 'アカウントが有効化されていません。メールに記載された手順にしたがって、アカウントを有効化してください。'
       invalid: '%{authentication_keys}またはパスワードが違います。'
-      locked: アカウントはロックされています。
-      last_attempt: もう一回誤るとアカウントがロックされます。
+      locked: 'アカウントがロックされています。'
+      last_attempt: 'あと一回誤るとアカウントがロックされます。'
       not_found_in_database: '%{authentication_keys}またはパスワードが違います。'
-      timeout: セッションがタイムアウトしました。もう一度ログインしてください。
-      unauthenticated: ログインもしくはアカウント登録してください。
-      unconfirmed: メールアドレスの本人確認が必要です。
+      timeout: 'セッションがタイムアウトしました。もう一度ログインしてください。'
+      unauthenticated: 'アカウント登録もしくはログインしてください。'
+      unconfirmed: '本登録を行ってください。'
     mailer:
       confirmation_instructions:
-        subject: メールアドレス確認のお願い
+        subject: 'アカウントの有効化について'
         greeting: '%{email}様'
-        message: 以下のリンクをクリックしてメールアドレスの確認を完了してください。
-        action: メールアドレスを確認する
+        message: '以下のリンクをクリックしてメールアドレスの確認を完了してください。'
+        action: 'メールアドレスを確認する'
       reset_password_instructions:
-        subject: パスワード再設定のご案内
+        subject: 'パスワードの再設定について'
         greeting: '%{email}様'
-        message: パスワード再設定のリクエストを受け付けました。以下のリンクをクリックしてパスワードの再設定を行ってください。
-        action: パスワードを再設定する
-        ignore: このメールに心当たりがない場合は、無視してください。
-        warning: 上記のリンクにアクセスして新しいパスワードを設定するまで、パスワードは変更されません。
+        message: 'パスワード再設定のリクエストを受け付けました。以下のリンクをクリックしてパスワードの再設定を行ってください。'
+        action: 'パスワードを再設定する'
+        ignore: 'このメールに心当たりがない場合は、無視してください。'
+        warning: '上記のリンクにアクセスして新しいパスワードを設定するまで、パスワードは変更されません。'
       unlock_instructions:
-        subject: アカウントロック解除のご案内
+        subject: 'アカウントのロック解除について'
         greeting: '%{email}様'
-        message: アカウントがロックされました。以下のリンクをクリックしてアカウントのロックを解除してください。
-        action: アカウントのロックを解除する
+        message: 'アカウントがロックされました。以下のリンクをクリックしてアカウントのロックを解除してください。'
+        action: 'アカウントのロックを解除する'
       email_changed:
-        subject: メールアドレス変更のお知らせ
+        subject: 'メールアドレスの変更について'
         greeting: '%{email}様'
-        message_unconfirmed: メールアドレスの変更が申請されました。新しいメールアドレス（%{email}）の確認が完了次第、変更が反映されます。
-        message_confirmed: メールアドレスが（%{email}）に変更されました。
+        message_unconfirmed: 'メールアドレスの変更が申請されました。新しいメールアドレス（%{email}）の確認が完了次第、変更が反映されます。'
+        message_confirmed: 'メールアドレスが（%{email}）に変更されました。'
       password_change:
-        subject: パスワード変更完了のお知らせ
+        subject: 'パスワードの変更について'
         greeting: '%{email}様'
-        message: パスワードが変更されたことをお知らせします。
-    sessions:
-      signed_in: ログインしました。
-      signed_out: ログアウトしました。
-      already_signed_out: すでにログアウト済みです。
-      new:
-        title: ログイン - Parts Sync
-        sign_in: ログイン
-        welcome_message: 安全なアクセスで、あなただけの経験を
-        no_account: アカウントをお持ちでない方は
-        banner_message: 最高の管理画面を体験してください
-    registrations:
-      destroyed: アカウントを削除しました。またのご利用をお待ちしております。
-      signed_up: アカウント登録が完了しました。
-      signed_up_but_inactive: ログインするためには、アカウントを有効化してください。
-      signed_up_but_locked: アカウントがロックされているためログインできません。
-      signed_up_but_unconfirmed: 本人確認用のメールを送信しました。メール内のリンクからアカウントを有効化させてください。
-      update_needs_confirmation: アカウント情報を変更しました。変更されたメールアドレスの本人確認のため、本人確認用メールより確認処理をおこなってください。
-      updated: アカウント情報を変更しました。
-      updated_but_not_signed_in: パスワードが変更されたため、再度ログインしてください。
-      new:
-        title: アカウント登録 - Parts Sync
-        sign_up: アカウント登録
-        welcome_message: 新規アカウントを作成して、サービスをご利用ください
-        terms_html: 利用規約とプライバシーポリシーに同意する
-        have_account: すでにアカウントをお持ちの方は
-      edit:
-        title: アカウント設定 - Parts Sync
-        profile_settings: プロフィール設定
-        password_settings: パスワード設定
-        current_password_note: 変更を確認するために現在のパスワードが必要です
-        password_leave_blank: 変更しない場合は空白のままにしてください
-        update: 更新する
-        cancel_account: アカウントを削除する
-        cancel_account_confirm: 本当にアカウントを削除しますか？この操作は取り消せません。
-        back: 戻る
+        message: 'パスワードが変更されたことをお知らせします。'
+    omniauth_callbacks:
+      success: '%{kind}アカウントによる認証に成功しました。'
+      failure: '%{kind}アカウントによる認証に失敗しました（%{reason}）。'
     passwords:
-      no_token: このページにはアクセスできません。パスワード再設定メールのリンクからアクセスされた場合には、URL をご確認ください。
-      send_instructions: パスワードの再設定について数分以内にメールでご連絡いたします。
-      send_paranoid_instructions: メールアドレスが登録済みの場合、パスワード再設定用のメールが数分以内に送信されます。
-      updated: パスワードが正しく変更されました。
-      updated_not_active: パスワードが正しく変更されました。
+      no_token: 'このページにはアクセスできません。パスワード再設定メールのリンクからアクセスされた場合には、URL をご確認ください。'
+      send_instructions: 'パスワードの再設定について数分以内にメールでご連絡いたします。'
+      send_paranoid_instructions: 'メールアドレスが登録済みの場合、パスワード再設定用のメールが数分以内に送信されます。'
+      updated: 'パスワードが正しく変更されました。'
+      updated_not_active: 'パスワードが正しく変更されました。'
       new:
-        title: パスワードをお忘れの方 - Parts Sync
-        forgot_password: パスワードをお忘れの方
-        instruction: 登録されているメールアドレスにパスワード再設定のリンクを送信します
-        banner_message: 最高の管理画面を体験してください
-        send_reset_link: パスワード再設定メールを送信
-        back_to_login: ログイン画面に戻る
+        title: 'パスワードをお忘れの方 - Parts Sync'
+        forgot_password: 'パスワードをお忘れの方'
+        instruction: '登録されているメールアドレスにパスワード再設定のリンクを送信します'
+        banner_message: '最高の管理画面を体験してください'
+        send_reset_link: 'パスワード再設定メールを送信'
+        back_to_login: 'ログイン画面に戻る'
       edit:
-        title: パスワード再設定 - Parts Sync
-        change_password: パスワードを変更する
-        new_password: 新しいパスワード
-        confirm_new_password: 新しいパスワード（確認）
-        change_my_password: パスワードを変更する
+        title: 'パスワード再設定 - Parts Sync'
+        change_password: 'パスワードを変更する'
+        new_password: '新しいパスワード'
+        confirm_new_password: '新しいパスワード（確認）'
+        change_my_password: 'パスワードを変更する'
+    registrations:
+      destroyed: 'アカウントを削除しました。またのご利用をお待ちしております。'
+      signed_up: 'アカウント登録が完了しました。'
+      signed_up_but_inactive: 'ログインするためには、アカウントを有効化してください。'
+      signed_up_but_locked: 'アカウントがロックされているためログインできません。'
+      signed_up_but_unconfirmed: '本人確認用のメールを送信しました。メール内のリンクからアカウントを有効化させてください。'
+      update_needs_confirmation: 'アカウント情報を変更しました。変更されたメールアドレスの本人確認のため、本人確認用メールより確認処理をおこなってください。'
+      updated: 'アカウント情報を変更しました。'
+      updated_but_not_signed_in: 'あなたのアカウントは正常に更新されましたが、パスワードが変更されたため、再度ログインしてください。'
+      new:
+        title: 'アカウント登録 - Parts Sync'
+        sign_up: 'アカウント登録'
+        welcome_message: '新規アカウントを作成して、サービスをご利用ください'
+        terms_html: '利用規約とプライバシーポリシーに同意する'
+        have_account: 'すでにアカウントをお持ちの方は'
+      edit:
+        title: 'アカウント設定 - Parts Sync'
+        profile_settings: 'プロフィール設定'
+        password_settings: 'パスワード設定'
+        current_password_note: '変更を確認するために現在のパスワードが必要です'
+        password_leave_blank: '変更しない場合は空白のままにしてください'
+        update: '更新する'
+        cancel_account: 'アカウントを削除する'
+        cancel_account_confirm: '本当にアカウントを削除しますか？この操作は取り消せません。'
+        back: '戻る'
+        email: 'メールアドレス'
+        first_name: '名'
+        last_name: '姓'
+        password: '新しいパスワード'
+        password_confirmation: '新しいパスワード（確認）'
+        current_password: '現在のパスワード'
+        profile_image: 'プロフィール画像'
+        google_profile_image_note: 'Google認証を使用している場合、プロフィール画像はGoogleアカウントと同期されます'
+        save_changes: '変更を保存'
+        account_settings: 'アカウント設定'
+        danger_zone: '危険な操作'
+        delete_account: 'アカウントを削除'
+        delete_account_warning: 'アカウントを削除すると、すべてのデータが完全に削除され、復元できなくなります。'
+        delete_account_confirm: '本当にアカウントを削除しますか？この操作は取り消せません。'
+        leave_blank_if_no_change: '変更しない場合は空白のままにしてください'
+        current_password_needed: '変更を確認するために現在のパスワードが必要です'
+        unhappy_message: 'ご不満な点がございましたらお問い合わせフォームにてご連絡ください'
+    sessions:
+      signed_in: 'ログインしました。'
+      signed_out: 'ログアウトしました。'
+      already_signed_out: '既にログアウト済みです。'
+      new:
+        title: 'ログイン - Parts Sync'
+        sign_in: 'ログイン'
+        welcome_message: '安全なアクセスで、あなただけの経験を'
+        no_account: 'アカウントをお持ちでない方は'
+        banner_message: '最高の管理画面を体験してください'
     shared:
       links:
-        sign_in: ログイン
-        sign_up: アカウント登録
-        forgot_password: パスワードをお忘れの方
+        sign_in: 'ログイン'
+        sign_up: 'アカウント登録'
+        forgot_password: 'パスワードをお忘れの方'
         sign_in_with_provider: '%{provider}でログイン'
         sign_up_with_provider: '%{provider}で登録'
-        back: 戻る
+        back: '戻る'
       minimum_password_length: '%{count}文字以上'
     unlocks:
-      send_instructions: アカウントのロック解除方法を数分以内にメールでご連絡します。
-      send_paranoid_instructions: アカウントが存在する場合、アカウントのロック解除方法を数分以内にメールでご連絡します。
-      unlocked: アカウントのロックが解除されました。
+      send_instructions: 'アカウントのロック解除方法を数分以内にメールでご連絡します。'
+      send_paranoid_instructions: 'アカウントが見つかった場合、アカウントのロック解除方法を数分以内にメールでご連絡します。'
+      unlocked: 'アカウントをロック解除しました。'
+  errors:
+    messages:
+      already_confirmed: 'は既に登録済みです。ログインしてください。'
+      confirmation_period_expired: 'の期限が切れました。%{period} までに確認する必要があります。 新しくリクエストしてください。'
+      expired: 'の有効期限が切れました。新しくリクエストしてください。'
+      not_found: 'は見つかりませんでした。'
+      not_locked: 'はロックされていません。'
+      not_saved:
+        one: 'エラーが発生したため %{resource} は保存されませんでした:'
+        other: '%{count} 件のエラーが発生したため %{resource} は保存されませんでした:'
+      taken: 'は既に使用されています。'
+      blank: 'が入力されていません。'
+      too_short: 'は%{count}文字以上に設定して下さい。'
+      too_long: 'は%{count}文字以下に設定して下さい。'
+      invalid: 'は有効でありません。'
+      confirmation: 'が内容とあっていません。'
+  activerecord:
+    attributes:
+      user:
+        email: 'メールアドレス'
+        password: 'パスワード'
+        password_confirmation: 'パスワード（確認）'
+        current_password: '現在のパスワード'
+        remember_me: 'ログインを記憶する'
+        first_name: '名'
+        last_name: '姓'
+        agreement: '利用規約への同意'
+        profile_picture_url: 'プロフィール画像'
